--- a/style.css
+++ b/style.css
@@ -3,4 +3,12 @@
     border: 2px solid rgb(157, 255, 0);
     background-color: rgb(79, 30, 170);
     color: white;
+    padding: 20px;
+    font-size: x-large;
+    float: left;
+}
+
+.container {
+    display: flex;
+    justify-content: space-around;
 }
